update logstash to use service and member configs